--- a/style.css
+++ b/style.css
@@ -138,10 +138,11 @@ section{
     height: 90vh;
 }
 .section__pic-container{
-    display:-webkit-flex;
+    display:-webkit-box;
     height: 400px;
     width: 400px;
     margin: auto 0;
+    z-index: 1000;
 }
 .section__text{
     align-self: center;
@@ -158,17 +159,11 @@ section{
     font-size: 1.75rem;
     margin-bottom: 1rem;
 }
-
-
-/* Dark mode styles */
 .title{
     font-size: 3rem;
     text-align: center;
+    z-index: 1000;
 }
-.darkmode--activated h1.title {
-    color: #fff !important;
-    z-index:10;    
-  }
   
 #socials-container{
     display: flex;
@@ -248,19 +243,6 @@ section{
     right: -5rem;
     bottom: 2.5rem;
 }
-
-/* Dark mode styles */
-.darkmode--activated .details-container {
-  background-color: #000000 !important;
-  color: #fff !important;
-  border-color: #fffefe !important;
-}
-
-/* Eklemek isterseniz daha fazla stil */
-.darkmode--activated .details-container p {
-  color: #fefefe !important;
-}
-
 .details-container{
     padding: 1.5rem;
     flex: 2;
@@ -275,6 +257,7 @@ section{
     height: 80%;
 }
 .section__pic-container{
+    display: -webkit-flex;
     height: 400px;
     width: 400px;
     margin: auto 0;
